# FSAA

./: .gitignore  .pre-commit-config.yaml  ALPHA_MANIFEST.json  ALPHA_RUNBOOK.md  ALPHA_SESSION_REPORT_2026-04-20.md  CHANGELOG.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  main_fsaa.py  pyproject.toml  reflex_policy.json  state_machine.md
.github/workflows/: fsaa-ci.yml
docs/: gap_analysis.md  rebuild_doctrine.md  telemetry_schema.md
docs/adr/: ADR-0001-dual-lexicon.md  ADR-0003-turn-lock-in-process-only.md
docs/eval/: goodhart_detector.md
scripts/: terminology_lists.py  verify_no_external_roots.py  verify_no_literals.py  verify_terminology.py
src/fsaa/: __init__.py
src/fsaa/cli/: __init__.py  entrypoint.py  main.py  workspace_runtime.py
src/fsaa/config/: __init__.py  paths.py
src/fsaa/contracts/: __init__.py  errors.py
src/fsaa/policy/: guard.py  (+2 more)
tests/: conftest.py  test_ab_harness_import.py  test_aios_adapter.py  test_aios_extended.py  test_append_only.py  test_audit_chain_parity.py  test_authority_log_fixture_parity.py  test_brain_status.py  test_cli_main.py  test_cli_validate_policy.py  test_config_paths.py  test_console_entry_targets.py  test_guard.py  test_guard_guarded_commit.py  test_guard_module_main.py  test_integration_state.py  test_ipc_schema_parity.py  test_manifest_parity.py  test_meaningful_actions.py  test_mock_runtime.py  test_real_poc_runner_import.py  test_registry_turn_token.py  test_runtime_registry.py  test_supervisor_cli.py  test_supervisor_parse.py  test_supervisor_run_side.py  test_turn_token_adapter.py  test_turn_token_and_experiments_coverage.py  test_turn_token_policy_contract.py  test_version_parity.py  test_workspace_runtime.py
tests/fixtures/: authority_guard_log.sample.jsonl  autonomy_1hz.fixture.jsonl
(+22 files in other folders)
